[project]
name = "neural-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.2.3",
    "ipython>=9.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pytest>=9.0.2",
    "setuptools>=82.0.0",
]
